# Objective-Aligned-Multi-Frame-Medical-VQA

./: README.md  pyproject.toml  requirements.txt
configs/: runtime_local_debug.yaml  runtime_medgemma_eval.yaml  runtime_qwen_eval.yaml  train_lora_medgemma.yaml  train_lora_qwen.yaml
data/processed/: medframeqa_split_ids.json  medframeqa_summary.json
scripts/: build_answer_data.py  evaluate_program.py  prepare_medframeqa.py  run_direct_answer_pipeline.py  run_posthoc_calibration.py  run_posthoc_eval.py  train_lora.py
src/shinkamed_vqa/: __init__.py  backend.py  build_answer_data.py  dataset_utils.py  direct_pipeline.py  evaluate.py  metrics.py  posthoc_calibration.py  posthoc_eval.py  prepare_medframeqa.py  train_lora.py
src/shinkamed_vqa/programs/: vanilla_direct.py
